finalizando a pagina principal e add da pagina de listagem

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
   <section class="cabecalho">
     <div>
-      <button class="clinica" type="button" name="myButton">Solicitação Clínicas</button>
-      <button class="listagem" type="button" name="myButton">Listagem de Solicitação</button>
+      <a href="/Samiracasto_Sitcon/listagem.html"> <button class="clinica" type="button" name="myButton">Solicitação Clínicas</button></a>
+      <a href="/Samiracasto_Sitcon/listagem.html"><button href="/Samiracasto_Sitcon/listagem.html" class="listagem" type="button" name="myButton">Listagem de Solicitação</button>
+    </div></a>
     </div>
   </section>
   <section class="formulario">
-    <button class="voltar" type="button" name="myButton">Voltar</button>
+    <a href="/Samiracasto_Sitcon/listagem.html"><button class="voltar" type="button" name="myButton">Voltar</button></a>
     <div class="form">
       <p class="nome">
         <label>Nome do Paciente</label>
